# RayCasting-OpenGL

./: CMakeLists.txt  README.md
opengl/: OGLRenderData.h  OGLRenderer.cpp  OGLRenderer.h  VertexBuffer.cpp
shaders/: Fragment.frag  Fragment.vert
tools/: Camera.cpp  Camera.h
